--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ steps:
 - task: Go@0
   inputs:
     command: 'build'
-    workingDirectory: '$(Build.ArtifactStagingDirectory)/main'
+    workingDirectory: '$(Build.ArtifactStagingDirectory)'
 - task: Docker@2
   inputs:
     containerRegistry: 'JFROG_BUILD'
