--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,8 +9,10 @@ steps:
     version: '1.15'
 - task: Go@0
   inputs:
+    command: 'get'
+- task: Go@0
+  inputs:
     command: 'build'
-    workingDirectory: '$(Build.ArtifactStagingDirectory)/main.go'
 - task: Docker@2
   inputs:
     containerRegistry: 'JFROG_BUILD'
