--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,10 @@ steps:
 - task: Go@0
   inputs:
     command: 'build'
+- task: Go@0
+  inputs:
+    command: 'test'
+    arguments: '-v'
 - task: Docker@2
   inputs:
     containerRegistry: 'JFROG_BUILD'
